experimental/parser/testdata/parser/method/incomplete.proto.stderr.txt
error: missing `(...)` around method return type
  --> testdata/parser/method/incomplete.proto:6:31
   |
 6 |     rpc Bar1(foo.Bar) returns foo.Bar;
   |                               ^^^^^^^
  help: insert (...) around the return type
   |
 6 |     rpc Bar1(foo.Bar) returns (foo.Bar);
   |                               +       +

error: missing method return type in service method
  --> testdata/parser/method/incomplete.proto:7:13
   |
 7 |     rpc Bar2(foo.Bar);
   |             ^^^^^^^^^ expected `returns (...)` after this

error: missing method parameter list in service method
  --> testdata/parser/method/incomplete.proto:8:9
   |
 8 |     rpc Bar3 returns (foo.Bar);
   |         ^^^^ expected `(...)` after this

error: expected exactly one type in method return type, got 0
  --> testdata/parser/method/incomplete.proto:9:31
   |
 9 |     rpc Bar4(foo.Bar) returns () {}
   |                               ^^

error: expected exactly one type in method parameter list, got 0
  --> testdata/parser/method/incomplete.proto:10:13
   |
10 |     rpc Bar5() returns (stream foo.Bar);
   |             ^^

error: expected exactly one type in method parameter list, got 0
  --> testdata/parser/method/incomplete.proto:11:13
   |
11 |     rpc Bar6() returns;
   |             ^^

error: missing method return type in service method
  --> testdata/parser/method/incomplete.proto:11:16
   |
11 |     rpc Bar6() returns;
   |                ^^^^^^^ expected `(...)` after this

error: unexpected `;` after `returns`
  --> testdata/parser/method/incomplete.proto:11:23
   |
11 |     rpc Bar6() returns;
   |                       ^ expected `(...)`

error: expected exactly one type in method parameter list, got 0
  --> testdata/parser/method/incomplete.proto:12:13
   |
12 |     rpc Bar7() returns stream foo.Bar;
   |             ^^

error: missing `(...)` around method return type
  --> testdata/parser/method/incomplete.proto:12:24
   |
12 |     rpc Bar7() returns stream foo.Bar;
   |                        ^^^^^^^^^^^^^^
  help: insert (...) around the return type
   |
12 |     rpc Bar7() returns (stream foo.Bar);
   |                        +              +

encountered 10 errors
